--- a/CS/운영체제/6장-프로세스-동기화.md
+++ b/CS/운영체제/6장-프로세스-동기화.md
@@ -1,22 +1,29 @@
 ## [프로세스 동기화 #1](https://core.ewha.ac.kr/publicview/C0101020140401134252676046?vmode=f)
-39분 부터 시작
-
 ### 데이터의 접근
 
-- 
+- Storage-box에서 연산할 데이터를 Execution-box로 보내 연산을 진행하고, 연산 겨로가를 다시 Storage-box로 보낸다.
+- S-box를 공유하는 E-box가 여럿 있는 경우 Race Condition의 가능성이 있음
+- E-box : CPU, 컴퓨터 내부, 프로세스 등
+- S-Box : Memory, 디스크, 프로세스의 주소 공간 등
 
 ### Race Condition
 
-- 
+- Race Condition(경쟁 상태) 하나의 데이터를 여러 주체가 동시에 작업할 경우 데이터의 불완전화가 진행될 수 있음.
 
 ### OS에서의 Race Condition
 
-- 
+- 커널에서 프로세스를 처리하는 도중에 인터럽트가 생길 경우 인터럽트 핸들러 상에서 일어나는 조작은 커널 프로세스에 제대로 반영되지 않음
+- 커널 수행 중 인터럽트 발생시
+- 해결책 : 커널 모드에서 수행중일 때는 CPU를 preempt하지 하지 않음 - 할당 시간이 정확히 지켜지진 않으나, 커널의 인터럽트 상에서 변경사항이 적용되지 않는 문제점을 해결 가능\
+- 여러 CPU를 사용할 경우(작업주체가 다수) - 데이터에 접근할 때 lock을 걸어서 다른 어느 누구도 접근하지 못하게끔 조치 
 
 ### Process Synchronization 문제
 
 - Example of a Race Condition
 - The Critical-Section Problem
+  - n개의 프로세스가 공유 데이터를 동시에 사용하기 원하는 경우
+  - 각 프로세스의 code segment에는 공유 데이터를 접근하는 코드인 critical section이 존재한다.
+  - 하나의 프로세스가 critical section에 있을 때 다른 모든 프로세스는 critical section에 들어갈 수 없어야 한다.
 
 ### 프로그램적 해결법의 충족조건
 
