--- a/CS/네트워크/1,-2장-네트워크와-모델.md
+++ b/CS/네트워크/1,-2장-네트워크와-모델.md
@@ -2,16 +2,99 @@
 
 ### [네트워크란?](https://youtu.be/Av9UFzl_wis?list=PL0d8NnikouEWcF1jJueLdjRIC4HsUlULi)
 
-- 
+- 노드들이 데이터를 공유할 수 있게 하는 디지털 전기통신망의 하나이다.
+
+  - 즉, 분산되어 있는 컴퓨터를 통신망으로 연결한 것을 말한다.
+  - 노드 간의 연결을 사용하여 서로에게 데이터를 교환한다.
+
+- ### 인터넷이란?
+
+  - 문서, 그림, 영상과 같은 여러가지 데이터를 공유하도록 구성된 세상에서 가장 큰 전 세계를 연결하는 네트워크
+  - www는 인터넷을 통해 웨과 관련된 데이터를 공유하는 것.
+
+
+
+
+- ### 네트워크의 분류 - 크기에 따른 분류
+
+  - LAN(Local Area Network) : 가까운 지역을 하나로 묶은 네트워크 
+  - WAN(Wide Area Network): 멀리 있는 지역을 한데 묶은 네트워크
+    - 가까운 지역끼리 묶긴 LAN과 LAN을 다시 하나로 묶은 것
+    - 2개 이상의 LAN을 연결시키셔 놓은 것이라 이해하면 된다.'
+
+- ### 네트워크의 분류 - 형태에 따른 분류
+
+  - STAR형 : 중앙 장비에 모든 노드가 연결된 형태
+    - 일반적인 가정집 : 공유기를 통해 복수의 디바이스 연결 - 해당 공유기 오류 시 전체 시스템에 문제가 생길 수 있음
+    - 근거리 네트워크 연결에 자주 사용됨
+  - Mesh형 : 여러 노드들이 서로 그물처럼 연결된 형태
+    - 한 개의 연결이 고장나더라도 다른 경로를 통해서 연결 가능
+
+- 실제 인터넷은 여러 형태를 혼합한 혼합형의 형태를 띤다.
+
+
+
+- ### 네트워크의 통신방식
+
+  - 유니캐스트 : 통신하려는 특정 대상에만 통신
+  - 멀티캐스트 : 같은 네트워크 대역에서 여러 명의 사용자가 있을 때, 특정 다수와 통신
+  - 브로드캐스트 : 같은 네트워크 대역에서 여러 명의 사용자가 있을 때, 모두와 통신
+
+
+
+- ### 프로토콜의 종류
+
+  - 근거리 : Ethernet 프로토콜 / MAC주소
+  - 원거리 : ICMP / IPv4 / ARP 등
+  - 여러가지 프로그램으로 연락할 때 : TCP, UDP(포트번호)
+
+  
+
+
 
 ### [실습1 (tracert)](https://youtu.be/paJf7JbBWqY?list=PL0d8NnikouEWcF1jJueLdjRIC4HsUlULi)
 
+- cmd
+  - tracert 8.8.8.8 
+  - IP주소들 :  구글 dns서버인 8.8.8.8로 가기위해서 거쳐간 네트워크 LAN 대역폭 목록(추적경로)
+
+
+### [네트워크 모델](https://youtu.be/y9nlT52SAcg?list=PL0d8NnikouEWcF1jJueLdjRIC4HsUlULi) : TCP/IP vs OSI 7Layer
+
+- TCP/IP 모델 
+  - 1계층 : 네트워크 / 인터페이스
+  - 2계층 : 네트워크
+  - 3계층 : 전송
+  - 4계층 : 응용
+- OSI 7Layer 
+  - 1계층 : 물리  - 전선, 전파, 광성뮤, 모뎀....
+  - 2계층 : 데이터 링크 - 이더넷, 무선랜, ISDN...
+  - 3계층 : 네트워크 - IP, ICMP, ARP ...
+  - 4계층 : 전송 - TCP, UDP
+  - 5계층 : 세션 - NetBIOS
+  - 6계층 : 표현 - SMP, AMP, XDR
+  - 7계층 : 응용 - HTTP
+
+- 공통점 
+  - 계층적 네트워크 모델
+  - 계층간의 역할 정의
+- 차이점
+  - 계층 수 차이
+  - OSI는 역할 기반, TCP/IP는 프로토콜 기반
+  - OSI는 통신 전반에 대한 표준인 반면에 TCP/IP는 데이터 전송기술에 특화
+
+
+
+- 패킷
+  - 네트워크 상에서 전달되는 데이터를 통칭하는 말
+  - 네트워크에서 전달하는 데이터의 형식화된 블록.
+  - 패킷은 제어 정보+사용자 데이터로 이루어지며 사용자 데이터는 페이로드라고도 한다.
+  - 패킷은 헤더 + 페이로드 + 풋터(잘 사용되지 않음) 의 구조로되어 있음
+  - 페이로드 안에 헤더+페이로드 형태로 반복될 수 있다. (캡슐화)
+  - 페이로드의 계층은 반드시 헤더의 계층보다 같거나 높아야 한다.
+  - 각 계층의 프로토콜을 붙인 모양이 다르기 때문에 각각의 계층을 부르는 용어가 모두 다름
+    - Protocol Data Unit = PDU
+    - 4계층의 PDU : segment
+    - 3계층의 PDU : 패킷
+    - 2계층의 PDU : 프레임
 - 
-
-### [실습2 (Wireshark)](https://youtu.be/vBrQ3yzerMg?list=PL0d8NnikouEWcF1jJueLdjRIC4HsUlULi)
-
-- 
-
-### [네트워크 모델](https://youtu.be/y9nlT52SAcg?list=PL0d8NnikouEWcF1jJueLdjRIC4HsUlULi)
-
--
