--- a/CS/운영체제/6장-프로세스-동기화.md
+++ b/CS/운영체제/6장-프로세스-동기화.md
@@ -33,23 +33,39 @@
 
 ### Semaphores
 
-- 
+- 락을 걸고 푸는 것을 semaphore를 이용하여 처리
+- P(s) : 공유데이터 획득 과정
+- V(s) : 반납하는 과정
+- Semaphore 5 : 데이터가 5개 
 
 ### Critical Section of n Processes
 
-- 
+- Critical Section 앞뒤로 P(mutex)와 V(mutex)를 이용하면 훨씬 효율적인 프로세스를 설계할 수 있음
 
-### Block / Wakeup Implementation
+### Block / Wakeup Implementation (sleep lock)
 
-- 
+- Semaphore를 다음과 같이 정의한다
+  - int값 value + struct process *L(프로세스를 연결하는 리스트)
 
 ### Two Types of Semaphores
 
-- 
+- busy-wait vs block/wakeup
+- block/wakeup overhead vs Critical section의 길이
+  - Critical section의 길이가 긴 경우 block/wakeup이 적당하다.
+  - critical section의 길이가 매우 짧은 경우  block/wakeup 어버헤드가 busy-wait오버헤드보다 더 커질 수 없다.
+  - 일반적으로는 block/wakeup방식이 더 효율적이다.
+- Two Types of semaphores
+  - Counting semaphore
+    - 도메인이 0 이상인 임의의 정수값
+    - 주로 resource counting에 사용된다.
+  - binary semaphore ( = mutex)
+    - 0/1만 가질 수 있는 semaphore
+    - 주로 mutual exclution( lock/unlock에 사용)
 
 ### Deadlock and Starvation
 
-- 
+- Deadlock : 둘 이상의 프로세스가 서로 상대방에 의해 충족될 수 있는 event를 무한히 기다리는 현상
+- Starvation :indefinite blocking : 프로세스가 suspend된 이유에 해당하는 세마포어 큐에서 빠져나갈 수 없는 현상.
 
 ## [프로세스 동기화 #3](https://core.ewha.ac.kr/publicview/C0101020140408134626290222?vmode=f)
 
@@ -58,9 +74,57 @@
 ### Classical Problems of Syncronization
 
 - Bounded-Buffer Problem (Producer-Consumer Problem)
+  - 버퍼(임시로 데이터를 저장하는공간)의 크기가 유한한 환경에서 생산자-소비자 문제가 발생
+  - producer : 공유데이터에 데이터를 집어 넣는 역할, Full buffer 하나 증가
+  - consumer : shared memory 내의 데이터를 꺼내고 empty buffer를 하나 추가
+  - 여러 생산자가 동시에 empty buffer에 접근할 경우 문제가 생길 수 있음 - Lock을 거는 작업을 통해 충돌 해결
+  - 여러 Consumer가 동시에 memory에 접근할 경우 동일하게 lock을 걸어서 다른 consumer가 접근하지 못하게 할 수 있음
+  - Shared data
+    - buffer 자체 및 buffer 조작 변수(empty/full buffer의 시작 위치)
+  - Synchronization variables
+    - mutual exclusion : Need binray semaphore ( shared data의 mutual exclusion을 위해)
+    - resource count : Need integer semaphore
+      - semaphore full = int, empty= int, mutex = 1(lock을 위한 변수)
 - Readers-Writers Problem
+  - 한 프로세스가 DB에 write중일 때 다른 process가 접근하면 안됨
+  - read는 동시에 여럿이 해도 된다
+  - solution
+    - Writer가 DB에 접근 허가를 아직 얻지 못한 상태에서는 모든 대기중인 Reader들을 다 DB에 접근하게 해 준다.
+    - Writer는 대기 중인 Reader가 하나도 없을 때 DB접근이 허용된다.
+    - 일단 Writer가 DB에 접근 중이면 Reader들은 접근이 금지된다.
+    - Writer가 DB에서 빠져나가야만 Reader의 접근이 허용된다.
+  - shared data
+    - DB자체
+    - Readcount : 현재 DB에 접근 중인 REader의 수
+  - Synchronization variables
+    - mutex : 공유 변수 readcount를 접근하는 코드의 mutual exclusion 보장을 위해 사용
+    - db : reader와 writer가 공유 db자체를 올바르게 접근하게 하는 역할
 - Dining-Philosophers Problem
+  - Synchorinzation variables
+    - semaphore chopstick[5] : 초기값은 모두 1
+    - 공유 자원을 경쟁하는 여러 프로세스가 가지는 문제를 표현
+  - Deadlock의 가능성이 있다
+    - 모든 프로세스가 동시에 공유 자원을 탐하는 경우 Deadlock이발생 
+      - 최대 4명(5명 정원일 경우)만 동시에 실행되도록 하거나
+      - 프로그램이 실행 가능할 경우에만 실행할 수 있도록 조치
+      - 짝수/홀수번째 처리자에 대한 예외처리
 
 ### Monitor
 
--
+- Semaphore의 문제점
+
+  - 코딩하기 힘들다
+  - 정확성(corerectness) 의 입증이 어렵다
+  - 자발접 협력이 필요하다.
+  - 한 번의 실수가 모든 프로그램에 치명적인 영향을 줄 수 있다.
+
+- 동시 수행중인 프로세스 사이에서 abstract data type의 안전한 공유를 보작하기 위한 high-level synchronization construct
+
+  - 모니터안에 공유 데이터와 공유 데이터에 접근할 수 없는 procedure을 정의하여 통제 권한을 정의
+
+  - lock을 걸 필요가 없다. 기본적으로 모니터에 대한 동시 접근이 불허되기 때문이다.
+
+  - 
+
+    
+
